schema/testdata/errors/fields_names_max_lenght.keel
model Foo {
    fields {
        //expect-error:9:62:E052:Cannot use 'aVeryLongLongLongLongLongFieldNameThatIsTrulyVeryLong' as a field name as it is too long.
        aVeryLongLongLongLongLongFieldNameThatIsTrulyVeryLong Text
        aLongLongLongLongLongFieldNameThatIsNotVeryLong Text
    }
}

task MyTask {
    fields {
        //expect-error:9:62:E052:Cannot use 'aVeryLongLongLongLongLongFieldNameThatIsTrulyVeryLong' as a field name as it is too long.
        aVeryLongLongLongLongLongFieldNameThatIsTrulyVeryLong Text
        aLongLongLongLongLongFieldNameThatIsNotVeryLong Text
    }
}